Fix calls to Class.newInstance() deprecated in Java 9